# Sudoku-Solver

./: CMakeLists.txt  CMakeSettings.json  README.md
SudokuSolver/: CMakeLists.txt  Puzzle.cpp  Puzzle.h  SudokuSolver.cpp  SudokuSolver.h  bit_ops.h
SudokuSolver/tests/: test_bit_ops.cpp  test_macros.h  test_main.cpp  test_solve.cpp
